# OpenGL-Exercise

./: .gitignore  .tmux_session  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.bat  build.sh  cmake_install.cmake  grassblock.ggb  objetosTexturizados  tilemap.txt  walkable.txt
imgs/: beeSprites.xcf
src/: 4.2.texture.glsl  glad.c  glad.h  main.cpp
